# aeo-infra

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md
mesh/: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml  setup-mesh.ps1
mesh/archive/shell/: add-syncthing-peer.sh  mesh-status.sh  setup-headscale-server.sh  setup-mesh.sh
mesh/archive/shell/lib/: mesh-common.sh
mesh/archive/specs/: SPEC-mesh-distributed.md
mesh/archive/sshfs/: README.md  reconnect.sh  setup-openssh-windows.ps1  setup-openssh-windows.sh  setup-ssh-server.sh  setup-sshfs-client.sh  setup-sshfs-windows.ps1  setup-sshfs-windows.sh
mesh/docs/: TESTING-GAPS.md  security-hardening.md  setup-linux.md  setup-windows.md  setup-wsl2.md
mesh/docs/architecture/: greenfield-reference-blueprint.mmd  ingress-egress-flow.mmd
mesh/docs/case-study/: AGENT-PROTECTION.md  JOURNEY.md  LESSONS-LEARNED.md  README.md  WINDOWS-CREDENTIALS.md  WSL-SSH.md
mesh/src/mesh/: __init__.py  __main__.py  cli.py  discovery.py
mesh/src/mesh/commands/: client.py  harden.py  host.py  init.py  peer.py  remote.py  server.py  smb.py  status.py  ubuntu.py  windows.py  wsl.py
mesh/src/mesh/core/: config.py  environment.py  headscale.py  privacy.py  syncthing.py  tailscale.py  templates.py
mesh/src/mesh/templates/: Caddyfile.headscale  deployment-checklist.md  firewall-port-matrix.csv  headscale-config-template.yaml  (+5 more)
mesh/tests/: __init__.py  _pii.py  test_cli_smoke.py  test_discovery.py  test_host_registry.py  test_init.py  test_templates.py
mesh/tests/integration/: conftest.py  docker-compose.yml  run-tests.sh  test_mesh_integration.py  test_windows.py
vms/: vm.sh  (+10 more)
(+65 files in other folders)
