[project]
name = "mesh"
version = "0.6.1"
description = "Mesh network setup and privacy hardening tools (Headscale + Syncthing)"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.15,<1.0",
    "rich>=13.0,<15.0",
    "httpx>=0.28,<1.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "pyyaml>=6.0,<7.0",
    "zeroconf>=0.131,<1.0",
]

[project.scripts]
mesh = "mesh.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mesh"]

[tool.ty.environment]
python-version = "3.13"

[dependency-groups]
dev = [
    "pyinstaller>=6.0,<8.0",
    "pytest>=8.0,<10.0",
    "ruff>=0.8,<1.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
